[tool.poetry]
name = "betting"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "^0.29.0"
fastapi = {extras = ["all"], version = "^0.112.0"}
click = "^8.1.7"
sqlalchemy = "^2.0.32"
aio-pika = "^9.4.2"
aiohttp = "^3.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
